force-app/main/default/objects/Abstract_Author__c/Abstract_Author__c.object-meta.xml
<CustomObject>
    <label>Abstract Author</label>
    <nameField>
        <displayFormat>AA-{YY}-{00000}</displayFormat>
        <label>Abstract Author Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abstract Authors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>