force-app/main/default/objects/Abstract_Author__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <referenceTo>Abstract__c</referenceTo>
    <relationshipLabel>Authors</relationshipLabel>
    <relationshipName>Abstract_Authors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>