force-app/main/default/objects/Abstract_Author__c/Abstract_Author__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Author__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Abstract Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authered Abstracts</relationshipLabel>
    <relationshipName>Authered_Abstracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>