force-app/main/default/objects/Abstract_Author__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Abstracts</relationshipLabel>
    <relationshipName>Abstract_Authors</relationshipName>
    <type>Lookup</type>
</CustomField>