force-app/main/default/objects/Abstract_Author__c/fields/Author_City__c.field-meta.xml
<CustomField>
    <fullName>Author_City__c</fullName>
    <label>Author City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>