force-app/main/default/objects/Abstract_Author__c/fields/Author_Country__c.field-meta.xml
<CustomField>
    <fullName>Author_Country__c</fullName>
    <label>Author Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>