force-app/main/default/objects/Abstract_Author__c/fields/Author_Department__c.field-meta.xml
<CustomField>
    <fullName>Author_Department__c</fullName>
    <label>Author Department</label>
    <length>120</length>
    <type>Text</type>
</CustomField>