force-app/main/default/objects/Abstract_Author__c/fields/Author_Email__c.field-meta.xml
<CustomField>
    <fullName>Author_Email__c</fullName>
    <label>Author Email</label>
    <type>Email</type>
</CustomField>