force-app/main/default/objects/Abstract_Author__c/fields/Author_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_First_Name__c</fullName>
    <label>Author First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>