force-app/main/default/objects/Abstract_Author__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Abstract__c</columns>
    <columns>NAME</columns>
    <columns>Abstract_Author__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>